删除中文字符，适用于python3.5的环境

--- a/movie_website/fresh_tomatoes.html
+++ b/movie_website/fresh_tomatoes.html
@@ -131,7 +131,7 @@
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="kq7cQNO0gYc" data-toggle="modal" data-target="#trailer">
     <img src="https://i.ytimg.com/vi/kq7cQNO0gYc/hqdefault.jpg?custom=true&w=196&h=110&stc=true&jpg444=true&jpgq=90&sp=67&sigh=hygtAvEgWaNKQGXKjv5KjEIS0Lo" width="196" height="110">
-    <h2>Samurai Champloo - Lofi HipHop Mix • Nujabes inspired</h2>
+    <h2>Samurai Champloo - Lofi HipHop Mix Nujabes inspired</h2>
 </div>
 
     </div>
